@@ -440,6 +440,9 @@ Other changes:
 * Added <scriptdef> task allowing tasks to be defined using any BSF-supported
   scripting language.  
 
+* <touch>'s datetime attribute can now accept time with a granularity
+  of seconds as well.  Bugzilla Report 21014.
+
 Changes from Ant 1.5.2 to Ant 1.5.3
 ===================================
 
